[package]
name = "shin"
version = "0.5.0"
edition = "2021"
description = "A visual novel engine used by some entergram games"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shin-core = { path = "../shin-core" }
shin-render = { path = "../shin-render" }
shin-derive = { path = "../shin-derive" }
shin-tasks = { path = "../shin-tasks" }
shin-audio = { path = "../shin-audio" }
shin-video = { path = "../shin-video" }

anyhow = { workspace = true }
async-trait = "0.1.58"
futures = "0.3.25"
smallvec = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
arrayvec = "0.7.2"
bytes = { workspace = true }
cfg-if = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
clap-num = "1.0.2"
dirs-next = "2.0.0"

winit = { workspace = true }
wgpu = { workspace = true }
etagere = "0.2.8"

glam = { workspace = true, features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck", "scalar-math"
] }
bytemuck = { version = "1.12.3", features = ["derive"] }
image = { workspace = true, default-features = false }

# Theese part of bevy does not depend on ECS or the reflection, so it's not a big problem to use them
bevy_utils = { workspace = true }

pollster = "0.3.0"

num-derive = "0.4.0"
num-traits = "0.2.15"
enum-map = { workspace = true }
derive_more = "0.99.17"
enum_dispatch = "0.3.8"
strum = "0.25.0"
anymap = "1.0.0-beta.2"
derivative = "2.2.0"
serde = "1.0.152"

itertools = { workspace = true }
once_cell = "1.16.0"
petitset = "0.2.1"

egui = { workspace = true }
egui-wgpu = { workspace = true }
# used for implementation of dynamic atlas overlay
usvg = "0.36.0"

# kira for audio output
kira = { workspace = true }

[features]
default = []
gstreamer-video = ["shin-video/gstreamer"]

[package.metadata.release]
# this crate is not ready for publishing yet
# (it has git dependencies)
publish = false
