[package]
name = "mesh-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12.1"
iced_core = "0.12.1"
iced_widget = "0.12.1"

iced_aw = "0.9.3"

hex = "0.4.3"

[package.metadata.release]
release = false
publish = false

[package.metadata.dist]
dist = false
