[package]
name = "mesh-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.13.1"
iced_core = "0.13.2"
iced_widget = "0.13.4"
iced_runtime = { version = "0.13.2", features = ["debug"] }

glam = "0.29.2"
faer = { version = "0.19.4", default-features = false, features = ["std"] }
float-ord = "0.3.2"

iced_aw = "0.11.0"

hex = "0.4.3"

[lints]
workspace = true

[package.metadata.release]
release = false
publish = false

[package.metadata.dist]
dist = false
