[package]
name = "mesh-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.13.1"
iced_core = "0.13.2"
iced_widget = "0.13.4"

glam = "0.30.0"
# faer curently doesn't compile without the npy feature (but we don't need it) :/
faer = { version = "0.21.4", default-features = false, features = ["std", "npy"] }
float-ord = "0.3.2"

iced_aw = "0.12.0"

hex = "0.4.3"

[lints]
workspace = true

[package.metadata.release]
release = false
publish = false

[package.metadata.dist]
dist = false
